--- a/Mobile Museum App/第七周组会会议纪要.md
+++ b/Mobile Museum App/第七周组会会议纪要.md
@@ -1,1 +1,58 @@
 
+# 第七周组会会议纪要
+
+## 会议要点：
+
+- 时间：2023年4月14日
+- 主持人：黄永超（组长）
+- 参会人员：刘益硕、刘实、张博阳、桂琰峰、孙桐宇
+- 会议记录及整理：黄永超
+
+## 会议主题：
+
+1. 掌上博物馆子系统开发任务简述
+2. 本周任务
+3. 确定开发环境
+
+## 会议内容：
+
+**一、后台管理子系统功能介绍：**
+
+组长向组员介绍了此系统的大致内容
+
+1.掌上博物馆（移动端App）
+
+**文物浏览**
+
+-   展示文物的基本信息和图片。
+-   支持文物讲解播放，可能包括音频或视频讲解。
+
+**用户交互**
+
+-   用户可以为文物点赞和留言评论。
+-   允许用户上传与文物相关的照片或视频，例如用户在博物馆拍摄的文物实拍照片。
+
+**以图搜图**
+
+-   用户可以上传图片进行文物搜索，系统将分析图片特征并匹配数据库中的相似文物。
+
+**用户个人信息管理**
+
+-   用户可以注册和登录，设置个人信息。
+
+
+**二、本周任务：**
+	小组成员各自学习APP开发的基础知识，下周确定分工
+
+**三、开发环境：**
+
+ **集成开发环境 (IDE)**：Android Studio：用于Android应用开发，包括Android SDK和模拟器。
+	**前端开发**：React Native
+	**后端开发**：Node.js
+**数据库**：MySQL
+ **编程语言**：Java
+
+
+## 会议总结：
+
+本周，我们讨论了掌上博物馆子系统的关键功能，并初步确定了开发环境。接下来，组员将深入学习各自的技术领域以确保项目顺利推进。下周会议将围绕具体分工进行讨论，以确保每个成员都能在其专长领域内贡献力量。
