--- a/Mobile Museum App/第七周组会会议纪要.md
+++ b/Mobile Museum App/第七周组会会议纪要.md
@@ -38,19 +38,18 @@
 
 **用户个人信息管理**
 
--   用户可以注册和登录，设置个人信息。
+    用户可以注册和登录，设置个人信息。
 
 
 **二、本周任务：**
-	小组成员各自学习APP开发的基础知识，下周确定分工
+    小组成员各自学习APP开发的基础知识，下周确定具体分工。
 
 **三、开发环境：**
 
  **集成开发环境 (IDE)**：Android Studio：用于Android应用开发，包括Android SDK和模拟器。
-	**前端开发**：React Native
-	**后端开发**：Node.js
-**数据库**：MySQL
- **编程语言**：Java
+ **前端开发**：React Native
+ **后端开发**：Node.js
+ **数据库**：MySQL
 
 
 ## 会议总结：
