--- a/Mobile Museum App/第七周组会会议纪要.md
+++ b/Mobile Museum App/第七周组会会议纪要.md
@@ -55,4 +55,4 @@
 
 ## 会议总结：
 
-本周，我们讨论了掌上博物馆子系统的关键功能，并初步确定了开发环境。接下来，组员将深入学习各自的技术领域以确保项目顺利推进。下周会议将围绕具体分工进行讨论，以确保每个成员都能在其专长领域内贡献力量。
+本周，我们讨论了掌上博物馆子系统的关键功能，并初步确定了开发环境。接下来，组员将深入学习各自的技术领域以确保项目顺利推进。下周会议将围绕具体分工进行讨论，以确保每个成员在不同领域内贡献力量。
