--- a/设计报告.md
+++ b/设计报告.md
@@ -1,4 +1,36 @@
 # 设计报告
 
+## **引言**
 
+### **1.1 目的**
 
+本文档旨在详细描述“海外藏中国文物知识管理与服务平台”项目的概要设计。该项目包括了从海外博物馆网站爬取中国文物信息、构建知识图谱、提供数据查询与可视化服务等多个子系统的开发。文档将详细介绍以下方面：
+
+- **系统功能简介**：概述各子系统的基本功能及作用。
+- **系统结构设计**：阐述整个平台的架构及各部分之间的交互关系。
+- **系统接口设计**：详细说明各子系统间接口的设计与实现。
+- **数据设计**：描述数据爬取、处理、存储的方法及使用的数据库技术。
+- **模块设计**：细分各功能模块，解释其内部逻辑与实现细节。
+- **界面设计**：展示用户界面的布局、风格及用户交互设计。
+
+本文档的预期读者包括：
+
+- **开发人员**：负责编写代码和实现系统功能。
+- **项目管理人员**：负责项目的整体规划与进度控制。
+- **测试人员**：负责全面测试系统的功能与性能。
+
+### **1.2 范围**
+
+该文档覆盖“海外藏中国文物知识管理与服务平台”的概要设计阶段，定义了系统的结构和各单元接口。具体实现方法和技术细节将在后续的详细设计文档中确定。
+
+### **1.3 缩写说明**
+
+- **UML**：Unified Modeling Language，统一建模语言。
+- **MVC**：Model-View-Controller，模式-视图-控制器架构。
+- **API**：Application Programming Interface，应用程序接口。
+- **DB**：Database，数据库。
+
+### **1.4 术语定义**
+
+- **知识图谱**：通过爬取和整理数据构建的，用于表示和存储海外中国文物信息的图形数据库。
+- **Web爬虫**：自动访问互联网网站并从中抽取信息的程序。
