组长在线编辑设计报告

--- a/设计报告.md
+++ b/设计报告.md
@@ -1,10 +1,14 @@
-# 设计报告
+# 设计报告：海外藏中国文物知识管理与服务平台
 
-## **引言**
+## **1. 引言**
 
 ### **1.1 目的**
 
-本文档旨在详细描述“海外藏中国文物知识管理与服务平台”项目的概要设计。该项目包括了从海外博物馆网站爬取中国文物信息、构建知识图谱、提供数据查询与可视化服务等多个子系统的开发。文档将详细介绍以下方面：
+本文档的目的是详细描述“海外藏中国文物知识管理与服务平台”项目的概要设计。
+
+该项目包括了从海外博物馆网站爬取中国文物信息、构建知识图谱、提供数据查询与可视化服务等多个子系统的开发。
+
+文档将详细介绍以下方面：
 
 - **系统功能简介**：概述各子系统的基本功能及作用。
 - **系统结构设计**：阐述整个平台的架构及各部分之间的交互关系。
@@ -21,7 +25,7 @@
 
 ### **1.2 范围**
 
-该文档覆盖“海外藏中国文物知识管理与服务平台”的概要设计阶段，定义了系统的结构和各单元接口。具体实现方法和技术细节将在后续的详细设计文档中确定。
+本文档覆盖了“海外藏中国文物知识管理与服务平台”的概要设计阶段，定义了系统的结构和各单元接口。具体实现方法和技术细节将在后续的详细设计文档中确定。
 
 ### **1.3 缩写说明**
 
@@ -29,8 +33,170 @@
 - **MVC**：Model-View-Controller，模式-视图-控制器架构。
 - **API**：Application Programming Interface，应用程序接口。
 - **DB**：Database，数据库。
+- **CHA** : China-Heritage-Abroad, 为本软件的简称。
 
 ### **1.4 术语定义**
 
 - **知识图谱**：通过爬取和整理数据构建的，用于表示和存储海外中国文物信息的图形数据库。
 - **Web爬虫**：自动访问互联网网站并从中抽取信息的程序。
+
+## 2. 总系统设计概述
+
+**CHA服务平台**的设计，采用模块化的主程序/子程序体系结构。
+
+整个平台由一个核心主程序和多个子程序组成，主程序负责调度各子程序并管理它们之间的通信。
+
+**主程序：**负责初始化系统，设置全局配置参数，并根据操作需求调用相应的子程序。
+
+主程序还负责处理子程序之间的数据交换和同步，确保系统运行的高效性和稳定性。
+
+**子程序：**
+
+- 知识图谱构建子系统：负责从指定的海外博物馆网站爬取中国文物信息，并对数据进行加工处理，构建知识图谱。
+
+- 海外文物知识服务子系统：利用知识图谱构建子系统获取的数据，提供数据浏览、查询、可视化等服务。
+
+- 知识问答子系统：使用知识图谱数据或互联网百科数据提供知识问答服务。
+
+- 掌上博物馆：通过手机端App支持文物展示和用户交互功能。
+
+- 后台管理子系统：用于管理系统中的所有数据和用户活动，包括审核用户生成的内容、数据备份与恢复等。
+
+各子程序之间通过定义好的接口进行数据交换和功能调用，主程序协调这些交互以保持系统的整体功能和性能。
+
+
+
+
+
+### 3. 子系统详细设计
+
+#### 3.1 知识图谱构建子系统详细设计
+
+##### 3.1.1 系统功能简介
+
+==[Todo]==
+
+##### 3.1.2 系统结构设计
+
+==[Todo]==
+
+##### 3.1.3 系统接口设计
+
+==[Todo]==
+
+##### 3.1.4 数据设计
+
+==[Todo]==
+
+##### 3.1.5 模块设计
+
+==[Todo]==
+
+##### 3.1.6 界面设计
+
+==[Todo]==
+
+#### 3.2 海外文物知识服务子系统详细设计
+
+##### 3.2.1 系统功能简介
+
+==[Todo]==
+
+##### 3.2.2 系统结构设计
+
+==[Todo]==
+
+##### 3.2.3 系统接口设计
+
+==[Todo]==
+
+##### 3.2.4 数据设计
+
+==[Todo]==
+
+##### 3.2.5 模块设计
+
+==[Todo]==
+
+##### 3.2.6 界面设计
+
+==[Todo]==
+
+#### 3.3 知识问答子系统详细设计
+
+##### 3.3.1 系统功能简介
+
+==[Todo]==
+
+##### 3.3.2 系统结构设计
+
+==[Todo]==
+
+##### 3.3.3 系统接口设计
+
+==[Todo]==
+
+##### 3.3.4 数据设计
+
+==[Todo]==
+
+##### 3.3.5 模块设计
+
+==[Todo]==
+
+##### 3.3.6 界面设计
+
+==[Todo]==
+
+#### 3.4 掌上博物馆子系统详细设计
+
+##### 3.4.1 系统功能简介
+
+==[Todo]==
+
+##### 3.4.2 系统结构设计
+
+==[Todo]==
+
+##### 3.4.3 系统接口设计
+
+==[Todo]==
+
+##### 3.4.4 数据设计
+
+==[Todo]==
+
+##### 3.4.5 模块设计
+
+==[Todo]==
+
+##### 3.4.6 界面设计
+
+==[Todo]==
+
+#### 3.5 后台管理子系统详细设计
+
+##### 3.5.1 系统功能简介
+
+==[Todo]==
+
+##### 3.5.2 系统结构设计
+
+==[Todo]==
+
+##### 3.5.3 系统接口设计
+
+==[Todo]==
+
+##### 3.5.4 数据设计
+
+==[Todo]==
+
+##### 3.5.5 模块设计
+
+==[Todo]==
+
+##### 3.5.6 界面设计
+
+==[Todo]==
+
