组长在线填写设计报告

--- a/设计报告.md
+++ b/设计报告.md
@@ -11,8 +11,8 @@
 文档将详细介绍以下方面：
 
 - **系统功能简介**：概述各子系统的基本功能及作用。
-- **系统结构设计**：阐述整个平台的架构及各部分之间的交互关系。
-- **系统接口设计**：详细说明各子系统间接口的设计与实现。
+- **体系结构设计**：阐述整个平台的架构及各部分之间的交互关系。
+- **接口设计**：详细说明各子系统间接口的设计与实现。
 - **数据设计**：描述数据爬取、处理、存储的方法及使用的数据库技术。
 - **模块设计**：细分各功能模块，解释其内部逻辑与实现细节。
 - **界面设计**：展示用户界面的布局、风格及用户交互设计。
@@ -64,7 +64,9 @@
 
 各子程序之间通过定义好的接口进行数据交换和功能调用，主程序协调这些交互以保持系统的整体功能和性能。
 
+**总系统体系结构设计概念图如下**
 
+<img src="./assets/image-20240419114449567.png" alt="image-20240419114449567" style="zoom:33%;" />
 
 
 
@@ -76,11 +78,11 @@
 
 ==[Todo]==
 
-- 3.1.2 系统结构设计
+- 3.1.2 体系结构设计
 
 ==[Todo]==
 
-- 3.1.3 系统接口设计
+- 3.1.3 接口设计
 
 ==[Todo]==
 
@@ -102,11 +104,11 @@
 
 ==[Todo]==
 
-- 3.2.2 系统结构设计
+- 3.2.2 体系结构设计
 
 ==[Todo]==
 
-- 3.2.3 系统接口设计
+- 3.2.3 接口设计
 
 ==[Todo]==
 
@@ -128,11 +130,11 @@
 
 ==[Todo]==
 
-- 3.3.2 系统结构设计
+- 3.3.2 体系结构设计
 
 ==[Todo]==
 
-- 3.3.3 系统接口设计
+- 3.3.3 接口设计
 
 ==[Todo]==
 
@@ -154,11 +156,11 @@
 
 ==[Todo]==
 
-- 3.4.2 系统结构设计
+- 3.4.2 体系结构设计
 
 ==[Todo]==
 
-- 3.4.3 系统接口设计
+- 3.4.3 接口设计
 
 ==[Todo]==
 
@@ -180,11 +182,11 @@
 
 ==[Todo]==
 
-- 3.5.2 系统结构设计
+- 3.5.2 体系结构设计
 
 ==[Todo]==
 
-- 3.5.3 系统接口设计
+- 3.5.3 接口设计
 
 ==[Todo]==
 
