new file:   assets/image-20240421132023122.png 	new file:   assets/image-20240421133931619.png 	new file:   assets/image-20240421134649113.png 	modified:   "\350\256\276\350\256\241\346\212\245\345\221\212.md"

--- a/设计报告.md
+++ b/设计报告.md
@@ -190,18 +190,67 @@
 ==[Todo]==
 
 - 3.5.3 接口设计
-
-==[Todo]==
+  - **数据管理 (Data Management)**
+    - **查询数据** (`GET /api/data/{type}`)
+      - 功能：根据类型查询数据。
+      - 参数：数据类型（用户，日志，备份等）。
+    - **新增数据** (`POST /api/data`)
+      - 功能：添加新数据。
+      - 参数：数据类型，数据内容。
+    - **删除数据** (`DELETE /api/data/{dataId}`)
+      - 功能：删除指定数据。
+      - 参数：数据ID。
+    - **更新数据** (`PUT /api/data/{dataId}`)
+      - 功能：更新指定数据。
+      - 参数：数据ID，新的数据内容。
 
 - 3.5.4 数据设计
 
-==[Todo]==
+| 表名                   | 字段名称   | 数据类型  | 长度                   | 能否为空 | 能否重复 | 说明                               |
+| ---------------------- | ---------- | --------- | ---------------------- | -------- | -------- | ---------------------------------- |
+| **统一用户信息表结构** | 用户名     | 字符型    | 15                     | 否       | 否       | 主键                               |
+|                        | 邮箱       | 字符型    | 320                    | 否       | 否       | 注册时使用的邮箱                   |
+|                        | 密码       | 字符型    | 20                     | 否       | 否       | 密码安全程度检测、使用加密         |
+|                        | 用户类型   | 枚举型    | Web端/手机端/管理员    | 否       | 是       | 标识用户所在平台                   |
+|                        | 状态       | 枚举型    | 正常/限时封禁/永久封禁 | 否       | 是       | 默认正常                           |
+| **文物表结构**         | 文物编号   | 字符型    | 15                     | 否       | 否       | 主键                               |
+|                        | 名称       | 字符型    | 100                    | 否       | 是       |                                    |
+|                        | 作者       | 字符型    | 15                     | 否       | 是       | 无作者则设为空                     |
+|                        | 讲解视频   | BLOB      | LONGBLOB（4GB）        | 是       | 是       | 没有视频就不要这项了               |
+|                        | 图片       | BLOB      | MEDIUMBLOB（16MB）     | 是       | 是       | 每个文物一张图，多张需要修改表结构 |
+|                        | 年代       | 字符型    | 10                     | 否       | 否       | 使用自带的时间类型无法满足要求     |
+|                        | 介绍       | 字符型    | 500                    | 是       | 是       |                                    |
+|                        | 类型       | 字符型    | 20                     | 否       | 是       | 为文物设置类型                     |
+|                        | 点赞数收藏 | 数值型    | 自行设置               | 否       | 是       | 点赞为手机端操作，收藏为Web端操作  |
+| **用户浏览记录表结构** | 用户名     | 字符型    | 15                     | 否       | 否       | 外键表统一用户信息表               |
+|                        | 文物编号   | 字符型    | 15                     | 否       | 否       | 外键表文物表                       |
+|                        | 时间       | TIMESTAMP |                        | 否       | 是       |                                    |
+| **用户收藏记录表结构** | 用户名     | 字符型    | 15                     | 否       | 否       | 外键表统一用户信息表               |
+|                        | 文物编号   | 字符型    | 15                     | 否       | 否       | 外键表文物表                       |
+| **用户评论记录表结构** | 用户名     | 字符型    | 15                     | 否       | 否       | 外键表统一用户信息表               |
+|                        | 文物编号   | 字符型    | 15                     | 否       | 否       | 外键表文物表                       |
+|                        | 评论       | 字符型    | 500                    | 否       | 是       | 字数上限可调整                     |
+|                        | 是否展示   | 布尔型    | 1                      | 否       | 是       | 默认为0，审核通过后设为1           |
+| **内容审核记录表**           | 审核编号         | 数值型      | 自行设置             | 否      | 否      | 主键，自增                             |
+|                              | 用户名           | 字符型      | 15                   | 否      | 否      | 外键表统一用户信息表                   |
+|                              | 内容类型         | 枚举型      | 文本/图片/视频       | 否      | 是      | 审核内容的类型                          |
+|                              | 审核结果         | 布尔型      | 1                    | 否      | 是      | 审核是否通过，通过为1，不通过为0        |
+|                              | 审核时间         | TIMESTAMP   |                      | 否      | 是      | 记录审核的时间                          |
+|                              | 审核员           | 字符型      | 15                   | 否      | 否      | 审核人员的用户名，外键表管理员信息表     |
+| **数据备份记录表**           | 备份编号         | 数值型      | 自行设置             | 否      | 否      | 主键，自增                             |
+|                              | 备份时间         | TIMESTAMP   |                      | 否      | 否      | 备份执行的时间                          |
+|                              | 备份文件路径     | 字符型      | 100                  | 否      | 否      | 备份文件存储的路径                      |
+|                              | 操作员           | 字符型      | 15                   | 否      | 否      | 执行备份操作的管理员，外键表管理员信息表 |
+| **日志管理表**               | 日志编号         | 数值型      | 自行设置             | 否      | 否      | 主键，自增                             |
+|                              | 操作员           | 字符型      | 15                   | 否      | 否      | 执行操作的管理员，外键表管理员信息表     |
+|                              | 操作类型         | 枚举型      | 添加/删除/修改/备份  | 否      | 是      | 执行的操作类型                          |
+|                              | 操作时间         | TIMESTAMP   |                      | 否      | 是      | 操作执行的时间                          |
+|                              | 操作描述         | 字符型      | 200                  | 是      | 是      | 操作的详细描述                          |
 
 - 3.5.5 模块设计
 
-==[Todo]==
+<img src="./assets/image-20240421132023122.png" alt="image-20240421132023122" style="zoom:33%;" />
 
 - 3.5.6 界面设计
 
-==[Todo]==
-
+![image-20240421134649113](./assets/image-20240421134649113.png)
