new file:   assets/image-20240421201459324.png 	new file:   assets/image-20240421201503110.png 	new file:   assets/image-20240421201517641.png 	new file:   assets/image-20240421201519818.png 	new file:   assets/image-20240421201530629.png 	modified:   "\350\256\276\350\256\241\346\212\245\345\221\212.md"

--- a/设计报告.md
+++ b/设计报告.md
@@ -187,7 +187,11 @@
 
 - 3.5.2 体系结构设计
 
-==[Todo]==
+<img src="./assets/image-20240421201503110.png" alt="image-20240421201503110" style="zoom: 80%;" />
+
+![image-20240421201519818](./assets/image-20240421201519818.png)
+
+
 
 - 3.5.3 接口设计
   - **数据管理 (Data Management)**
@@ -205,6 +209,8 @@
       - 参数：数据ID，新的数据内容。
 
 - 3.5.4 数据设计
+
+  ![image-20240421201530629](./assets/image-20240421201530629.png)
 
 | 表名                   | 字段名称   | 数据类型  | 长度                   | 能否为空 | 能否重复 | 说明                               |
 | ---------------------- | ---------- | --------- | ---------------------- | -------- | -------- | ---------------------------------- |
