--- a/设计报告.md
+++ b/设计报告.md
@@ -76,27 +76,75 @@
 
 - 3.1.1 系统功能简介
 
-==[Todo]==
+1.**数据爬取**:爬取海外博物馆网站的中国文物信息，包括文物名字、文物图片、年代、介绍等信息。按照规定格式保存下载的数据。
+
+2.**数据建模**:将爬取的数据转化为三元组形式，并转化为`csv`格式文件存储到`MySQL`数据库中；将爬取到的图片数据存储到图床中。
+
+3.**数据补充**:根据需要从互联网爬取数据，对现有数据进行补充，如相关数据的基础信息缺失，需要从其他来源进行爬取或人工补充。例如，从百度百科下载数据，补充现有数据，如书画作家信息等。
+
+4.**数据存储**:将根据步骤2中建模好的三元组数据保存到Virtuoso或Neo4j图数据库中，发布成链接开放数据，用于其他小组后续功能开发，并构建海外文物知识图谱。
 
 - 3.1.2 体系结构设计
 
-==[Todo]==
+![未命名文件 (3)](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/167691932/f6564c39-3cca-4d0d-93b0-33d176c07346)
+
 
 - 3.1.3 接口设计
 
-==[Todo]==
+- **数据管理 (Data Management)**
+
+  - **数据爬取接口**
+    - 博物馆数据爬取接口：接收博物馆网址列表，爬取指定博物馆的中国文物信息。
+    - 补充数据爬取接口：根据需要从互联网爬取数据，对现有数据进行补充。
+
+  - **数据处理接口**
+    - 数据转化接口：将爬取的数据转化为三元组形式。
+    - 数据补充接口：根据需要从其他来源进行爬取或人工补充数据，如从百度百科下载数据补充文物信息。
+
+  - **数据存储接口**
+    - 保存到数据库接口：将处理好的三元组数据保存到图数据库（Virtuoso或Neo4j）或关系型数据库（MySQL等）中。
+    - 发布链接开放数据接口：将处理好的数据发布成链接开放数据，可用于关系图谱、时间轴等知识图谱可视化、问答等功能开发。
 
 - 3.1.4 数据设计
 
-==[Todo]==
+Mysql数据库的数据设计和后台管理子系统的设计相同。
+
+neo4j数据库的数据设计如下：
+
+- 节点（Nodes）
+
+| 类型         | 字段名称       | 数据类型 | 长度                  | 能否为空 | 能否重复 | 说明                   |
+| ------------ | -------------- | -------- | --------------------- | -------- | -------- | ---------------------- |
+| 文物节点     | 文物编号       | 数值型   | 15                    | 否       | 否       |                        |
+|              | 名称           | 字符型   | 100                   | 否       | 是       | 可视化图中圆圈里面的字 |
+|              | 介绍           | 字符型   | 500                   | 是       | 否       |                        |
+| 朝代节点     | 朝代名称       | 字符型   | 50                    | 否       | 否       | 可视化图中圆圈里面的字 |
+| 作者节点     | 作者名称及介绍 | 字符型   | 100                   | 否       | 否       | 可视化图中圆圈里面的字 |
+| 藏品材质节点 | 材质名称       | 字符型   | 50                    | 否       | 否       | 可视化图中圆圈里面的字 |
+| 藏品来源节点 | 来源名称       | 枚举型   | 征集购买/接受捐赠等   | 否       | 否       | 可视化图中圆圈里面的字 |
+| 藏品等级节点 | 等级名称       | 枚举型   | 一级/二级/三级/未定级 | 否       | 否       | 可视化图中圆圈里面的字 |
+| 藏品类型节点 | 类型名称       | 字符型   | 20                    | 否       | 否       | 可视化图中圆圈里面的字 |
+
+- 边（Relationships）
+
+| 关系名称 | 关系类型 | 方向             | 源节点   | 目标节点     | 属性 | 说明             |
+| -------- | -------- | ---------------- | -------- | ------------ | ---- | ---------------- |
+| 制造于   | 制造于   | 文物 -> 朝代     | 文物节点 | 朝代节点     | 无   | 文物属于某个朝代 |
+| 创作者   | 创作者   | 文物 <- 作者     | 文物节点 | 作者节点     | 无   | 文物的作者       |
+| 藏品材质 | 藏品材质 | 文物 -> 藏品材质 | 文物节点 | 藏品材质节点 | 无   | 文物的材质       |
+| 藏品来源 | 藏品来源 | 文物 -> 藏品来源 | 文物节点 | 藏品来源节点 | 无   | 文物的来源       |
+| 藏品等级 | 藏品等级 | 文物 -> 藏品等级 | 文物节点 | 藏品等级节点 | 无   | 文物的等级       |
+| 藏品类型 | 藏品类型 | 文物 -> 藏品类型 | 文物节点 | 藏品类型节点 | 无   | 文物的类型       |
 
 - 3.1.5 模块设计
 
-==[Todo]==
+![未命名文件 (2)](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/167691932/2e0738e4-8b4d-45b7-83d5-8651869ac65f)
+
 
 - 3.1.6 界面设计
 
-==[Todo]==
+![image-20240421201722425](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/167691932/9fa09907-0888-47ca-8028-c0e5da6ce0cd)
+
 
 ### 3.2 海外文物知识服务子系统详细设计
 
