--- a/设计报告.md
+++ b/设计报告.md
@@ -174,29 +174,53 @@ neo4j数据库的数据设计如下：
 
 ### 3.3 知识问答子系统详细设计
 
-- 3.3.1 系统功能简介
+3.3.1 系统功能简介
 
-==[Todo]==
+- **功能描述**：
+  - 问答功能：用户通过输入查询相关文物信息，系统从静态数据源中检索相关信息并展示结果。
 
-- 3.3.2 体系结构设计
+3.3.2 体系结构设计
 
-==[Todo]==
+- **前端技术**：
+  - HTML5 和 CSS3：用于构建响应式和交互式网页。
+  - JavaScript（ES6+）：负责前端逻辑处理，包括数据的检索、展示和用户交互。
 
-- 3.3.3 接口设计
+- **后端技术**：
+  - Django：作为轻量级的Web服务器，处理静态文件的服务和基本的路由。
+  - Python：用于编写后端逻辑和处理复杂的数据操作。
 
-==[Todo]==
+- **数据存储**：
+  - 使用静态 JSON 文件（`data.json`）存储数据，但设计成多个小文件按需加载，优化性能和可管理性。
 
-- 3.3.4 数据设计
+3.3.3 接口设计
 
-==[Todo]==
+- 无需传统的 RESTful API，通过 Django 配置静态文件直接访问，使用 JavaScript 进行前端数据的拉取和解析。
 
-- 3.3.5 模块设计
+3.3.4 数据设计
 
-==[Todo]==
+- **数据模型(暂定)**：
+  - `data.json`：存储展品的详细信息，每条记录包括 ID、名称、描述、类别、图片 URL 等。
 
-- 3.3.6 界面设计
+3.3.5 模块设计
 
-==[Todo]==
+- **搜索引擎模块**：
+  - 前端 JavaScript 实现一个简易的搜索引擎，能够解析用户的查询请求，进行关键词匹配和结果。
+
+- **展示模块**：
+  - 动态内容展示：使用 CSS 动画和 JavaScript 生成内容，提供平滑的用户体验和交互。
+
+3.3.6 界面设计
+
+- **主页**：
+  - 设计现代而简洁的界面。
+  - 集成一个搜索框，支持关键词高亮和即时回答结果显示。
+  - 响应式设计，确保能提供良好的视觉体验。
+ 
+  类似聊天机器人界面设计![image](https://github.com/tlopex/ChinaHeritageAbroad/assets/68688494/60c347a8-6d43-485b-8270-00b97cd70529)
+
+
+ 
+
 
 ### 3.4 掌上博物馆子系统详细设计
 
