--- a/设计报告.md
+++ b/设计报告.md
@@ -203,8 +203,8 @@ neo4j数据库的数据设计如下：
 
 3.3.5 模块设计
 
-- **搜索引擎模块**：
-  - 前端 JavaScript 实现一个简易的搜索引擎，能够解析用户的查询请求，进行关键词匹配和结果。
+- **问答引擎模块**：
+  - 前端 JavaScript 实现一个简易的问答引擎，能够解析用户的查询请求，进行关键词匹配和结果。
 
 - **展示模块**：
   - 动态内容展示：使用 CSS 动画和 JavaScript 生成内容，提供平滑的用户体验和交互。
