--- a/设计报告.md
+++ b/设计报告.md
@@ -203,6 +203,9 @@ neo4j数据库的数据设计如下：
 
 3.3.5 模块设计
 
+- **数据处理模块**：
+  - 后端python对知识图谱数据进行处理，为问答系统提供知识数据。
+
 - **问答引擎模块**：
   - 前端 JavaScript 实现一个简易的问答引擎，能够解析用户的查询请求，进行关键词匹配和结果。
 
