--- a/设计报告.md
+++ b/设计报告.md
@@ -227,49 +227,46 @@ neo4j数据库的数据设计如下：
 
 ### 3.4 掌上博物馆子系统详细设计
 
-- 3.4.1 系统功能简介
+#### 3.4.1 系统功能简介
+掌上博物馆子系统旨在为用户提供一个通过手机应用浏览、搜索和互动文物信息的移动友好界面。主要功能包括：
+- 文物展示
+- 用户个人信息管理
+- 以图搜图功能
+- 用户交互（评论、点赞、收藏）
 
-	掌上博物馆子系统旨在为用户提供一个通过手机应用浏览、搜索和互动文物信息的移动友好界面。主要功能包括：
+#### 3.4.2 体系结构设计
+体系结构设计图展示了各个组件如何协同工作：
+![体系结构设计](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/d076e1fc-99ec-4c0c-8f62-dec213491c3e.png)
 
-	-   文物展示
-	-   用户个人信息管理
-	-   以图搜图功能
-	-   用户交互（评论、点赞、收藏）
+#### 3.4.3 接口设计
+主要接口包括：
+- **文物数据获取** (`GET /api/artifacts`): 获取文物列表，支持筛选和排序。
+- **文物详细信息** (`GET /api/artifacts/{id}`): 根据文物ID获取详细信息。 
+- **用户登录** (`POST /api/users/login`): 用户登录接口。
+- **用户注册** (`POST /api/users/register`): 用户注册接口。
+- **评论发布** (`POST /api/comments`): 发布对某文物的评论。 
+- **图片搜索** (`POST /api/search/image`): 以图搜图功能实现。
 
-- 3.4.2 体系结构设计
+#### 3.4.4 数据设计
+数据设计待完成。
 
-![无标题-2024-04-21-2107](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/d076e1fc-99ec-4c0c-8f62-dec213491c3e)
+#### 3.4.5 模块设计
+模块设计图展示了掌上博物馆的主要模块：
+![模块设计1](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/78eb1346-4589-45cb-9b71-92ccf0d16f6f.png)
+![模块设计2](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/21ce4123-18fc-4546-9990-30967eb1b643.png)
+![模块设计3](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/36664efe-ee95-4102-90eb-bc6579a283ab.png)
+![模块设计4](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/b14bb772-fa95-4ea5-ba31-bed35f25d879.png)
+![模块设计5](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/664a65e3-35fa-42ee-a982-5c085942d280.png)
 
-- 3.4.3 接口设计
+#### 3.4.6 界面设计
+界面设计包括了以下屏幕：
+- **启动屏幕**
+  ![启动屏幕](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/3d9282a2-9d72-4ff0-8958-01e0b1f65b73.png)
+- **登录界面**
+  ![登录界面](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/0f539c62-892e-49db-b251-b4d15a20a003.png)
+- **主页面**
+  ![主页面](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/9aed7416-b1fa-4810-808a-2a56a827b3d2.png)
 
-	主要接口包括：
-	 -  **文物数据获取** (`GET /api/artifacts`): 获取文物列表，支持筛选和排序。
-	   -  **文物详细信息** (`GET /api/artifacts/{id}`): 根据文物ID获取详细信息。 
-	  -  **用户登录** (`POST /api/users/login`): 用户登录接口。
-	  -  **用户注册** (`POST /api/users/register`): 用户注册接口。
-	  -  **评论发布** (`POST /api/comments`): 发布对某文物的评论。 
-	 -  **图片搜索** (`POST /api/search/image`): 以图搜图功能实现。
-
-- 3.4.4 数据设计
-
-==[Todo]==
-
-- 3.4.5 模块设计
-
-<img width="325" alt="20568559a5dcef0bb4a07cdab926828" src="https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/78eb1346-4589-45cb-9b71-92ccf0d16f6f">
-<img width="325" alt="fa092c49c185ab88de325c74acc2011" src="https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/21ce4123-18fc-4546-9990-30967eb1b643">
-<img width="325" alt="c2e7fc2b14c74f7a81cb17d87110ac2" src="https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/36664efe-ee95-4102-90eb-bc6579a283ab">
-<img width="325" alt="67ec0cc76a2fd70f4ccd42b72578227" src="https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/b14bb772-fa95-4ea5-ba31-bed35f25d879">
-<img width="325" alt="08926ad96087fa30c45a0c69f6a1e8b" src="https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/664a65e3-35fa-42ee-a982-5c085942d280">
-
-
-- 3.4.6 界面设计
-Splash screen
-<img width="151" alt="882f9a20e26c70e2e53742e98a36b18" src="https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/3d9282a2-9d72-4ff0-8958-01e0b1f65b73">
-Sign in
-<img width="151" alt="069f7d9d5f264167ffe0433b92ab956" src="https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/0f539c62-892e-49db-b251-b4d15a20a003">
-Main page
-<img width="151" alt="f22733c94c076d706203643a0d20e49" src="https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/9aed7416-b1fa-4810-808a-2a56a827b3d2">
 
 ### 3.5 后台管理子系统详细设计
 
