--- a/设计报告.md
+++ b/设计报告.md
@@ -181,16 +181,17 @@ neo4j数据库的数据设计如下：
 
 3.3.2 体系结构设计
 
-- **前端技术**：
-  - HTML5 和 CSS3：用于构建响应式和交互式网页。
-  - JavaScript（ES6+）：负责前端逻辑处理，包括数据的检索、展示和用户交互。
 
-- **后端技术**：
-  - Django：作为轻量级的Web服务器，处理静态文件的服务和基本的路由。
-  - Python：用于编写后端逻辑和处理复杂的数据操作。
+- **与知识图谱构建子系统的连接**：
+    - **数据接收**：知识问答子系统通过 RESTful API 接收知识图谱构建子系统处理后的数据更新，这些数据包括新的或更新的文物信息。
+    - **接口设计**：API 通过 JSON 格式交换数据，包括文物的名称、描述、类别等关键字段。
+- **与海外文物知识服务子系统的连接**：
+    - **数据共享**：知识问答子系统提供一个查询接口供海外文物知识服务子系统调用，以获取特定查询的详细回答。
+    - **接口设计**：允许海外文物知识服务子系统根据需要定制所请求的数据格式和内容。
 
-- **数据存储**：
-  - 使用静态 JSON 文件（`data.json`）存储数据，但设计成多个小文件按需加载，优化性能和可管理性。
+  - **与后台管理子系统的连接**：
+    - **数据监控和管理**：提供信息用于监控问答系统的状态和管理问答内容。
+
 
 3.3.3 接口设计
 
