--- a/设计报告.md
+++ b/设计报告.md
@@ -150,27 +150,140 @@ neo4j数据库的数据设计如下：
 
 - 3.2.1 系统功能简介
 
-==[Todo]==
+（1）数据浏览：支持多种形式展示的浏览功能。①提供基本的筛选、排序功能，可按照文物类型、文物年代、博物馆等多种基础信息进行索引、筛选、排序方式浏览文物信息以方便用户的使用。②提供查看文物详情功能，显示文物的详细数据，如文本、图像等信息，点击文物图片，可以进行放大缩小。③相关文物推荐功能，在该文物页面显示相关文物，相关规则自定，如相似主题、同一作者、图像内容相似等。
+
+（2）数据查询：支持文物的简单查询功能和高级查询功能。简单查询根据输入的关键字，如文物名称、博物馆名称、文物年代等进行查询。高级查询可以对文物的多个字段进行限定查询。
+
+（3）数据可视化显示：支持两种可视化。①包含结点、边的力导向图知识图谱展示。②文物时间轴：按照时间轴的方式、展示各个时段的文物信息、时间等信息。
 
 - 3.2.2 体系结构设计
 
-==[Todo]==
+![知识服务体系结构图](./assets/知识服务体系结构图.jpg)
 
 - 3.2.3 接口设计
 
-==[Todo]==
+- 3.2.3.1 文物浏览接口 (ArtifactBrowseAPI)
+
+**目的**：允许用户浏览文物列表。
+
+- 输入
+  - `filterParameters`: 过滤参数（例如类型、年代、博物馆）
+  - `sortOrder`: 排序参数
+- 输出
+  - `artifactList`: 文物信息列表
+- **行为**：根据提供的过滤和排序参数返回文物列表。
+
+- 3.2.3.2 文物详情接口 (ArtifactDetailAPI)
+
+**目的**：提供特定文物的详细信息。
+
+- 输入
+  - `artifactId`: 文物标识符
+- 输出
+  - `artifactDetails`: 文物的详细信息，包括图片、作者、年代、隶属博物馆
+- **行为**：返回指定文物的详细数据，包括图像和文本描述。
+
+- 3.2.3.3 文物查询接口 (ArtifactQueryAPI)
+
+**目的**：支持对文物数据的查询。
+
+- 输入
+  - `queryParameters`: 查询参数（简单或高级）
+- 输出
+  - `queryResults`: 查询结果
+- **行为**：根据输入的查询参数执行搜索并返回结果。
+
+- 3.2.3.4 知识图谱可视化接口 (KnowledgeGraphVisualizationAPI)
+
+**目的**：提供文物知识图谱的可视化表示。
+
+- 输入
+  - `visualizationParameters`: 可视化参数
+- 输出
+  - `visualizationData`: 图谱可视化数据
+- **行为**：根据参数生成并返回知识图谱的可视化表示。
+
+- 3.2.3.5 推荐系统接口 (RecommendationAPI)
+
+**目的**：根据用户正在浏览的文物特征，推荐其他文物。
+
+- 输入
+  - `artifactId`: 当前查看的文物ID
+- 输出
+  - `recommendations`: 推荐的文物列表
+- **行为**：根据当前文物推荐相关文物。
 
 - 3.2.4 数据设计
 
-==[Todo]==
+Mysql 数据库的数据设计和后台管理子系统的设计相同。
+
+neo4j 数据库的数据设计与知识图谱子系统的设计相同。
 
 - 3.2.5 模块设计
 
-==[Todo]==
+![模块设计](./assets/模块设计.jpg)
 
 - 3.2.6 界面设计
 
-==[Todo]==
+主要为 web 端各种界面的设计。主要有：首页、文物浏览页面、知识图谱页面、文物时间轴页面、知识问答页面.
+
+- 3.2.6.1 首页
+  
+- 顶部菜单栏
+
+![顶部菜单栏效果图](./assets/顶部菜单栏效果图.png)
+
+可以分成两个部分，具体参考上图。
+
+第一部分：处于页面最顶部，左边显示欢迎语句，右边显示用户（未登录则显示登录按钮，已登录则显示用户名称）
+
+第二部分：主要菜单按钮。最左边显示 logo，然后依次往右为首页、文物浏览、知识图谱、时间轴、知识问答系统、管理员登录。
+
+- 首页主体部分
+
+**第一部分**：文物信息的滚动介绍，或博物馆信息的滚动介绍。
+
+**第二部分**：博物馆推荐，类似下图。占据一行，每行有若干列，每列上面为图片，下面为介绍。
+
+**第三部分**：文物推荐。与第二部分相同，可以随机选择一些文物进行推荐，尺寸与上面博物馆推荐的图片相同。
+
+**第四部分**：其它，待补充。
+
+- 3.2.6.2 文物浏览页面
+
+![文物浏览页面每个文物图](./assets/文物浏览页面每个文物图.png)
+
+页面主体部分展示所有文物。文物展示页面如上图，对于每件文物，上面为文图图片，下面为文物的简要描述，包括文物名称、作者、类型。
+
+页面上方为文物浏览提供基本的筛选、排序功能，可按照文物类型、文物年代、博物馆等多种基础信息进行索引、筛选、排序。
+
+点击文物图片，可以进行文物具体信息的浏览，跳转到文物详情介绍页面。
+
+- 3.2.6.3 知识图谱页面
+
+与知识图谱小组衔接。
+
+- 3.2.6.4 文物时间轴页面
+
+草图如下。
+
+![时间轴草图](./assets/时间轴草图.png)
+
+- 3.2.6.5 知识问答页面
+
+与知识问答小组衔接。
+
+- 3.2.6.6 文物详情页面
+
+![文物详情页草图](./assets/文物详情页草图.png)
+
+与上图克利夫兰博物馆介绍相似。
+
+左侧为文图图片，右侧为文物详细介绍，包括文物图片、名称、作者、类型、介绍。
+
+具有文物收藏功能。
+
+页面底端有相似文物推荐，显示相似文物的图片与介绍。
 
 ### 3.3 知识问答子系统详细设计
 
