new file:   assets/image-20240422201959709.png 	new file:   assets/image-20240422202020269.png 	new file:   assets/image-20240422202023547.png 	new file:   assets/image-20240422202026180.png 	new file:   assets/image-20240422202031850.png 	new file:   assets/image-20240422202034387.png 	new file:   assets/image-20240422202052687.png 	new file:   assets/image-20240422202056173.png 	new file:   assets/image-20240422202059157.png 	modified:   "\350\256\276\350\256\241\346\212\245\345\221\212.md"

--- a/设计报告.md
+++ b/设计报告.md
@@ -228,7 +228,7 @@ neo4j 数据库的数据设计与知识图谱子系统的设计相同。
 主要为 web 端各种界面的设计。主要有：首页、文物浏览页面、知识图谱页面、文物时间轴页面、知识问答页面.
 
 ##### 3.2.6.1 首页
-  
+
 - 顶部菜单栏
 
 ![顶部菜单栏效果图](./assets/顶部菜单栏效果图.png)
@@ -299,7 +299,7 @@ neo4j 数据库的数据设计与知识图谱子系统的设计相同。
 - **与知识图谱构建子系统的连接**：
     - **数据接收**：知识问答子系统通过 RESTful API 接收知识图谱构建子系统处理后的数据更新，这些数据包括新的或更新的文物信息。
     - **接口设计**：API 通过 JSON 格式交换数据，包括文物的名称、描述、类别等关键字段。
-      
+    
 - **与海外文物知识服务子系统的连接**：
     - **数据共享**：知识问答子系统提供一个查询接口供海外文物知识服务子系统调用，以获取特定查询的详细回答。
     - **接口设计**：允许海外文物知识服务子系统根据需要定制所请求的数据格式和内容。
@@ -334,11 +334,11 @@ neo4j 数据库的数据设计与知识图谱子系统的设计相同。
   - 设计现代而简洁的界面。
   - 集成一个搜索框，支持关键词高亮和即时回答结果显示。
   - 响应式设计，确保能提供良好的视觉体验。
- 
+
   类似聊天机器人界面设计![image](https://github.com/tlopex/ChinaHeritageAbroad/assets/68688494/60c347a8-6d43-485b-8270-00b97cd70529)
 
 
- 
+
 
 
 ### 3.4 掌上博物馆子系统详细设计
@@ -352,7 +352,7 @@ neo4j 数据库的数据设计与知识图谱子系统的设计相同。
 
 #### 3.4.2 体系结构设计
 体系结构设计图展示了各个组件如何协同工作：
-![体系结构设计](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/d076e1fc-99ec-4c0c-8f62-dec213491c3e.png)
+![image-20240422201959709](./assets/image-20240422201959709.png)
 
 #### 3.4.3 接口设计
 主要接口包括：
@@ -368,11 +368,9 @@ neo4j 数据库的数据设计与知识图谱子系统的设计相同。
 
 #### 3.4.5 模块设计
 模块设计图展示了掌上博物馆的主要模块：
-![模块设计1](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/78eb1346-4589-45cb-9b71-92ccf0d16f6f.png)
-![模块设计2](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/21ce4123-18fc-4546-9990-30967eb1b643.png)
-![模块设计3](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/36664efe-ee95-4102-90eb-bc6579a283ab.png)
-![模块设计4](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/b14bb772-fa95-4ea5-ba31-bed35f25d879.png)
-![模块设计5](https://github.com/Vanthoci/ChinaHeritageAbroad/assets/149762781/664a65e3-35fa-42ee-a982-5c085942d280.png)
+
+![image-20240422202052687](./assets/image-20240422202052687.png)![image-20240422202056173](./assets/image-20240422202056173.png)![image-20240422202059157](./assets/image-20240422202059157.png)
+
 
 #### 3.4.6 界面设计
 界面设计包括了以下屏幕：
