--- a/Mobile Museum App/第一周组会会议纪要.md
+++ b/Mobile Museum App/第一周组会会议纪要.md
@@ -46,10 +46,11 @@
 
 **三、开发环境：**
 
- **集成开发环境 (IDE)**：Android Studio：用于Android应用开发，包括Android SDK和模拟器。
-	**前端开发**：React Native
+ **集成开发环境 (IDE)**：Hbuiderx：
+	**前端开发**：vue,html,js
 	**后端开发**：Node.js
-**数据库**：MySQL
+**数据库**：unicloud
+
 
 
 
